--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
   },
   "include": ["src"]
 }
